--- a/style.css
+++ b/style.css
@@ -3,17 +3,22 @@ body {
     margin: 0px;
   }
   /* todo: fix formatting for all pages */
-  /* todo: fix formatting for buttons */
   /* todo: fix formatting for header */
 
 
+.container{
+  display:flex;
+  align-items:center;
+  flex-direction:column;
+ 
+}
 
    /* todo: fix formatting for questions and answers */
   ol {
-    list-style-type: none;
+    /* list-style-type: none; */
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: hidden;  
   }
   
   li {
@@ -29,7 +34,48 @@ body {
   
   p {
     font-size: 20px;
+    text-align: center;
+  }
+
+  .initials{
+    text-align: center;
   }
   
-
+ /* todo: fix formatting for buttons */
   
+ #btn-start {
+  margin: 0;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  /* padding: 10px 24px;  */
+  width:50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+ #btn {
+    margin: 0;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    /* padding: 10px 24px;  */
+    width:50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  
+  #answer-btn{
+
+    background-color: lightgreen; 
+    border: 1px solid black; 
+    padding: 10px 24px; 
+    width:100%; 
+    cursor: pointer; /* Pointer/hand icon */
+    display: block; /* Make the buttons appear below each other */
+}
+      
+/* Add a background color on hover */
+#answer-btn:hover{
+    background-color: green;
+}
