--- a/style.css
+++ b/style.css
@@ -1,81 +1,208 @@
+
+html {
+  height: 100%;
+}
+
 body {
-    display: block;
-    margin: 0px;
-  }
-  /* todo: fix formatting for all pages */
-  /* todo: fix formatting for header */
+  
+  box-sizing: border-box;
+  margin: 0; 
+  height: 100%;
 
-
-.container{
-  display:flex;
-  align-items:center;
-  flex-direction:column;
- 
+  display: flex;
+  flex-direction: column;
 }
 
-   /* todo: fix formatting for questions and answers */
-  ol {
-    /* list-style-type: none; */
-    margin: 0;
-    padding: 0;
-    overflow: hidden;  
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  p {
-    font-size: 20px;
-    text-align: center;
-  }
-
-  .initials{
-    text-align: center;
-  }
-  
- /* todo: fix formatting for buttons */
-  
- #btn-start {
+h1 {
   margin: 0;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  /* padding: 10px 24px;  */
+  font-size: 2em;
+  text-align: center;
+}
+
+.fas {
+  margin-right: 10px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover, 
+a:focus, 
+a:active {
+  color: blue;
+}
+
+button,
+.back-button {
+  display: inline-block;
+  padding: 5px 15px;
+  margin: 0.5em 0.5em 0 0.5em;
+  border-radius: 10px;
+  border-style: none;
+  border: 1px solid black; 
+  background-color: lightgreen; 
+  cursor: pointer;
+  font-size: 1em;
+  text-align:center;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.back-button:hover, 
+.back-button:focus, 
+.back-button:active,
+button:hover, 
+button:focus, 
+button:active{
+  background-color: green;
+}
+
+.back-button {
+  margin-left: 0;
+}
+
+.hidden {
+  display: none;
+}
+
+nav {
+  padding: 20px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: auto;
+  height: 75%;
+  box-sizing: border-box;
+  padding: 20px 0;
+}
+
+#start {
+  text-align: center;
+}
+
+#question {
+  font-size: 1.4em;
+}
+ 
+.choice-status {
+  text-align: center;
+}
+
+#timer {
+  font-size: 1em;
+  font-weight: bold;
+}
+
+#choices {
+  text-align: center;
+  list-style: none;
+  padding-left: 0;
+}
+
+#choices button {
   width:50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  margin-left: 0;
 }
 
- #btn {
-    margin: 0;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    /* padding: 10px 24px;  */
-    width:50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+.choice-status {
+  font-size: 1.35em;
+  font-weight: bold;
+}
+
+#correct {
+ color:  blue;
+}
+
+#incorrect {
+  color: red;
+}
+
+#quiz-questions, 
+#end {
+  padding-bottom: 20px;
+}
+
+#score-text {
+  font-size: 1.5em;
+  text-align: center;
+}
+
+#score {
+  font-weight: bold;
+}
+
+#submit-score {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+#submit-score label {
+  display: block;
+}
+
+#initials {
+  padding: 3px;
+  font-size: 1em;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.error {
+  border: 1.5px solid red;
+}
+
+#error-message {
+  color: red;
+  margin-top: 5px;
+}
+
+table {
+  border-spacing: 0 0.5em;
+}
+
+tr:nth-child(even) {
+  background-color: lightgreen;
+}
+
+td, th {
+  padding: 10px;
+}
+
+th {
+  border-bottom: 1px solid black;
+}
+
+td {
+  text-align: center;
+}
+
+th:first-child,
+td:first-child {
+  text-align: left;
+}
+
+th:last-child,
+td:last-child  {
+  text-align: right;
+}
+
+#hs-buttons {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+@media only screen and (min-width: 992px) {
+  main {
+    width: 60%;
   }
-  
-  #answer-btn{
-
-    background-color: lightgreen; 
-    border: 1px solid black; 
-    padding: 10px 24px; 
-    width:100%; 
-    cursor: pointer; /* Pointer/hand icon */
-    display: block; /* Make the buttons appear below each other */
 }
-      
-/* Add a background color on hover */
-#answer-btn:hover{
-    background-color: green;
+
+@media only screen and (min-width: 1200px) {
+  main {
+    width: 40%;
+  }
 }
